--- a/index.html
+++ b/index.html
@@ -1,91 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Login Page</title>
-        <style>
-            body {
-                background: linear-gradient(to bottom, #89c6ff, #e74c3c);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                margin: 0;
-            }
-        </style>
-    </head>
     <body>
-        <h1>Login</h1>
-        <form id="login-form">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" /><br />
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" /><br />
-            <button type="submit">Login</button>
-        </form>
-
-        <script>
-            document
-                .getElementById("login-form")
-                .addEventListener("submit", function (event) {
-                    event.preventDefault();
-                    const username = document.getElementById("username").value;
-                    const password = document.getElementById("password").value;
-
-                    if (username === "Alex" && password === "Alex123") {
-                        window.location.href = "index1.html";
-                    } else if (username === "User" && password === "User123") {
-                        window.location.href = "watch.html";
-                    } else if (username === "Avi" && password === "Avi123") {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "index1.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else if (
-                        username === "Tully" &&
-                        password === "Tully123"
-                    ) {
-                        window.location.href = "watch.html";
-                    } else {
-                        window.location.href = "https://www.amazon.co.uk/";
-                    }
-                });
-        </script>
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
