--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Login Page</title>
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="index.css" />
     </head>
     <body>
         <div id="content-wrapper">
@@ -38,6 +38,6 @@
             </div>
         </div>
 
-        <script src="login.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
