ad.gif on tullys user

--- a/ad.html
+++ b/ad.html
@@ -61,12 +61,10 @@
         </style>
     </head>
     <body>
-        <p></p>
-        <br />
         <div id="ad-container">Ad</div>
         <div id="countdown">5</div>
         <div id="cross" onclick="redirectToChoose()">✕</div>
-        <iframe frameborder="0"></iframe>
+        <iframe src="ad.gif" frameborder="0"></iframe>
         <script>
             // Countdown timer
             var seconds = 5;
