--- a/ad.html
+++ b/ad.html
@@ -64,10 +64,7 @@
         <div id="ad-container">Ad</div>
         <div id="countdown">5</div>
         <div id="cross" onclick="redirectToChoose()">✕</div>
-        <iframe
-            src="https://www.canva.com/design/DAFzxlopI-0/_1bs1GmPkJolBwGJm9ybag/watch?utm_content=DAFzxlopI-0&utm_campaign=share_your_design&utm_medium=link&utm_source=shareyourdesignpanel"
-            frameborder="0"
-        ></iframe>
+        <iframe src="ad.gif" frameborder="0"></iframe>
         <script>
             // Countdown timer
             var seconds = 5;
