--- a/channels.html
+++ b/channels.html
@@ -5,8 +5,8 @@
         <style>
             body {
                 background: linear-gradient(45deg, #4caf50, #1e90ff);
-                background-repeat: no-repeat;
-                background-size: 100% 100%;
+                background-repeat: repeat;
+                background-size: 100% 550%;
                 text-align: center;
                 color: #fff;
             }
