--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="index3.css" />
         <title>login page</title>
     </head>
     <div class="container" id="container">
@@ -77,6 +77,6 @@
         </div>
     </div>
     <body>
-        <script src="index.js"></script>
+        <script src="index3.js"></script>
     </body>
 </html>
