--- a/index3.html
+++ b/index3.html
@@ -56,7 +56,7 @@
                 <input type="email" placeholder="email" />
                 <input type="password" placeholder="password" />
                 <a href="#">forgot your password?</a>
-                <button>sign in</button>
+                <button type="submit">sign in</button>
             </form>
         </div>
         <div class="toggle-container">
