--- a/index.html
+++ b/index.html
@@ -1,42 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Login Page</title>
-        <link rel="stylesheet" type="text/css" href="index.css" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+        <link rel="stylesheet" href="index.css" />
+        <title>login page</title>
     </head>
-    <body>
-        <div id="content-wrapper">
-            <h1>Login</h1>
-            <form id="login-form">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" /><br />
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" /><br />
-                <button type="submit">Login</button>
+    <div class="container" id="container">
+        <div class="form-container sign-up">
+            <form>
+                <h1>create account</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-google-plus-g"></i
+                    ></a>
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-facebook-f"></i
+                    ></a>
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-linkedin-in"></i
+                    ></a>
+                </div>
+                <span>or use your email for registration</span>
+                <input type="text" placeholder="name" />
+                <input type="email" placeholder="email" />
+                <input type="password" placeholder="password" />
+                <input type="code" placeholder="code" />
+                <button>sign up</button>
             </form>
         </div>
-
-        <div class="cookie-consent" id="cookie-consent">
-            <p>
-                Select Your Cookie Preferences. We use cookies and similar tools
-                that are necessary to enable you to make purchases, to enhance
-                your experiences and to provide our services, as detailed in our
-                Cookie Notice. We also use these cookies to understand how
-                customers use our services (for example, by measuring site
-                visits) so we can make improvements. If you agree, we’ll also
-                use cookies to complement your shopping experience across the
-                alexkatz websites as described in our Cookie Notice. This
-                includes using first- and third-party cookies, which store or
-                access standard device information such as a unique identifier.
-                Third parties use cookies for their purposes of displaying and
-                measuring personalized ads, generating audience insights, and
-                developing and improving products.
-            </p>
-            <div class="cookie-buttons">
-                <button id="accept-cookies">Accept All</button>
-                <button id="decline-cookies">Decline All</button>
+        <div class="form-container sign-in">
+            <form>
+                <h1>Sign In</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-google-plus-g"></i
+                    ></a>
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-facebook-f"></i
+                    ></a>
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="#" class="icon"
+                        ><i class="fa-brands fa-linkedin-in"></i
+                    ></a>
+                </div>
+                <span>or use your email</span>
+                <input type="email" placeholder="email" />
+                <input type="password" placeholder="password" />
+                <a href="#">forgot your password?</a>
+                <button>sign in</button>
+            </form>
+        </div>
+        <div class="toggle-container">
+            <div class="toggle">
+                <div class="toggle-panel toggle-left">
+                    <h1>Welcome Back!</h1>
+                    <p>enter your personal details to use all features</p>
+                    <button class="hidden" id="login">Sign In</button>
+                </div>
+                <div class="toggle-panel toggle-right">
+                    <h1>Welcome!</h1>
+                    <p>
+                        Register with your personal details to use all features
+                    </p>
+                    <button class="hidden" id="Register">Sign Up</button>
+                </div>
             </div>
         </div>
+    </div>
+    <body>
         <script src="index.js"></script>
     </body>
 </html>
