--- a/index.html
+++ b/index.html
@@ -78,5 +78,7 @@
     </div>
     <body>
         <script src="index.js"></script>
+        <script id="textmagic_widget_id" src="https://widgets.textmagic.com/widget-script.js" data-code="4c70d7da4f35c97" data-type="subscribe" defer></script>
+
     </body>
 </html>
