--- a/search.html
+++ b/search.html
@@ -166,5 +166,7 @@
         </script>
 
         <script src="https://www.youtube.com/iframe_api"></script>
+        <script id="textmagic_widget_id" src="https://widgets.textmagic.com/widget-script.js" data-code="4c70d7da4f35c97" data-type="subscribe" defer></script>
+
     </body>
 </html>
